# pycolumns

./: .gitignore  main.py  pyproject.toml  setup.py
pycolumns/: __init__.py  _column.py  _column_pywrap.c  chunks.py  column.py  columns.py  convenience.py  defaults.py  indices.py  mergesort.py  metafile.py  schema.py  util.py
pycolumns/tests/: test_access.py  test_ccolumn.py  test_chunks.py  test_create.py  test_create_index.py  test_delete.py  test_query.py  test_schema.py  test_vacuum.py
