[project]
name = "pycolumns"
dynamic = ["version"]
description = "A simple, efficient, pythonic column data store"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blosc>=1.11.3",
    "fitsio>=1.2.6",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pip>=25.1.1",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "setuptools>=80.9.0",
    "types-setuptools>=80.9.0.20250809",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pycolumns.version.__version__" }

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
allow_any_generics = true
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_decorators = true
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "blosc",
    "fitsio",
    "esutil",
    "pycolumns._column_pywrap",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["NPY201"]